Kubernetes/drift-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drift-deployment
  namespace: log-anomaly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drift-service
  template:
    metadata:
      labels:
        app: drift-service
    spec:
      containers:
      - name: drift-service
        image: preet1018/drift-service:latest
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: models-storage
          mountPath: /app/models
        - name: data-storage
          mountPath: /app/data_storage
      volumes:
      - name: models-storage
        persistentVolumeClaim:
          claimName: models-pvc
      - name: data-storage
        persistentVolumeClaim:
          claimName: data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: drift-service
  namespace: log-anomaly
spec:
  selector:
    app: drift-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30001
