Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netsentinel-ingress
  namespace: log-anomaly
spec:
  rules:
  - host: netsentinel.local
    http:
      paths:
      - path: /drift
        pathType: Prefix
        backend:
          service:
            name: drift-service
            port:
              number: 8001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8501
